{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 19,
  "lineage": "c242095f-d3e3-fe3a-26aa-e4108db02654",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-11T05:51:06.429-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/blackhards/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/blackhards/global/networks/default",
            "priority": 1000,
            "project": "blackhards",
            "self_link": "https://www.googleapis.com/compute/v1/projects/blackhards/global/firewalls/allow-http",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "allow-http"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-11T05:51:06.438-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/blackhards/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/blackhards/global/networks/default",
            "priority": 1000,
            "project": "blackhards",
            "self_link": "https://www.googleapis.com/compute/v1/projects/blackhards/global/firewalls/allow-https",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "allow-https"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20230919",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/blackhards/zones/europe-west2-b/disks/core01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "This is our Virtual Machine",
            "effective_labels": {
              "machine_type": "e2-micro",
              "name": "core01"
            },
            "enable_display": false,
            "id": "projects/blackhards/zones/europe-west2-b/instances/core01",
            "instance_id": "6555853949370050595",
            "label_fingerprint": "7FvCAtPCUJo=",
            "labels": {
              "machine_type": "e2-micro",
              "name": "core01"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "size": "20"
            },
            "metadata_fingerprint": "yvGKCKRU59Q=",
            "metadata_startup_script": "echo hi \u003e /text.txt",
            "name": "core01",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/blackhards/global/networks/default",
                "network_ip": "10.154.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/blackhards/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "blackhards"
              }
            ],
            "project": "blackhards",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/blackhards/zones/europe-west2-b/instances/core01",
            "service_account": [
              {
                "email": "188784667618-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "terraform_labels": {
              "machine_type": "e2-micro",
              "name": "core01"
            },
            "zone": "europe-west2-b"
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/blackhards/global/networks/blackhards-network",
            "mtu": 0,
            "name": "blackhards-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "blackhards",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/blackhards/global/networks/blackhards-network"
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sub1",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-11T06:24:14.726-07:00",
            "gateway_address": "10.3.0.1",
            "id": "projects/blackhards/regions/europe-west2/subnetworks/blackhards-subnet",
            "ip_cidr_range": "10.3.0.0/16",
            "name": "blackhards-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/blackhards/global/networks/blackhards-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "blackhards",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/blackhards/regions/europe-west2/subnetworks/blackhards-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.subnets.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sub2",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-11T06:24:16.866-07:00",
            "gateway_address": "10.4.0.1",
            "id": "projects/blackhards/regions/europe-west1/subnetworks/blackhards-subnet1",
            "ip_cidr_range": "10.4.0.0/16",
            "name": "blackhards-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/blackhards/global/networks/blackhards-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "blackhards",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/blackhards/regions/europe-west1/subnetworks/blackhards-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.subnets.google_compute_network.default"
          ]
        }
      ]
    }
  ]
}